--- a/css/timeship.css
+++ b/css/timeship.css
@@ -1,9 +1,9 @@
 /* =============================================================================
-#     FileName: codepiano.css
+#     FileName: timeship.css
 #         Desc: stylesheet for blog
-#       Author: codepiano
-#        Email: anyexingchen999@qq.com
-#     HomePage: http://www.weibo.com/anyexingchen
+#       Author: timeship
+#        Email: leonwowo@gmail.com
+#     HomePage: http://www.weibo.com/nightix
 #      Version: 0.0.1
 #   LastChange: 2013-05-14 14:13:41
 #      History:
