--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,5 +2,5 @@
 theme :
   name : twitter
 ---
-{% include codepiano/setup %}
+{% include timeship/setup %}
 {% include themes/twitter/default.html %}
